# sj3

./: ClientsJa.md  FAQJa.md  InstallJa.md  Makefile.am  MigrationGuide.md  MigrationGuideJa.md  ProjectHome.md  README  README.eucJP  Sj3servSettingsJa.md  TodoJa.md  configure.in  sj3.spec.in
dict/: Makefile.am
doc/man/: Makefile.am
include/: Makefile.am
include/sj3common/: Const.h  Makefile.am  sj_euc.h  sj_string.h
include/sj3compat/: sj3compat.h
include/sj3core/: Struct.h  sj_dict.h  sj_global.h  sj_kanakan.h  sj_rename.h  sj_study.h  sj_suuji.h
include/sj3lib/: Makefile.am  sj3lib.h
include/sj3lua/: Makefile.am  sj3lua.h
include/sj3rkcv/: Makefile.am
lib/: Makefile.am
lib/lua/: Makefile
lib/lua/etc/: lua.pc
lib/lua/src/: Makefile.am  lmathlib.c  lparser.c  lstrlib.c  luaconf.h
lib/lua/test/: Makefile.am
lib/sj3compat/: Makefile.am  bsd-asprintf.c  bsd-getpeereid.c  bsd-snprintf.c  fake-rfc2553.c  getopt.c  inet_ntoa.c  setproctitle.c  strlcat.c  strlcpy.c
lib/sj3core/: Makefile.am  adddic.c  charsize.c  cmpstr.c  dict.c  functbl.c  fzkyomi.c  getrank.c  global.c  init.c  memory.c  mkbunset.c  mkjiritu.c  mvmemi.c  peepdic.c  ph_khtbl.c  prtytbl.c  s2ctbl.c  sdepend.c  selclrec.c  setconj.c  setkouho.c  setubi.c  skipkstr.c  sstrcmp.c  termtbl.c  wakachi.c
lib/sj3lib/: level1.c
lib/sj3lua/: Makefile.am  sj3lua.c
lib/sj3rkcv/: rk_conv.c  sj3_rkcv.c  wc16_str.c
src/sj3demo/: Makefile.am  sj3demo.c
src/sj3dic/: codecnv.c  sj3dic.h  sj3err.c  sjctype.h  sjrc.c  sjtool.h
src/sj3mkdic/: Makefile.am  char.c  knjcvt.c  memory.c  readline.c  sj3_dict_const.h  sj3_dict_struct.h  string.c
src/sj3proxy/: Makefile.am  freebsd-sj3proxy.sh.in  priv.c  sj3proxy.c  sj3proxy.h  sj3proxy.lua.example.in
src/sj3serv/: Makefile.am  auth.c  comuni.c  error.c  execute.c  freebsd-sj3.sh.in  main.c  priv.c  setup.c  sj3serv.h  sj3serv.lua.example.in  sj_string.c  sj_string.h  version.c
src/sj3stat/: Makefile.am  sj3stat.c
trunk/: Makefile.am  README.eucJP  configure.in
trunk/dict/: Makefile.am
trunk/doc/: Makefile.am
trunk/doc/doc/: Makefile.am
trunk/include/: Makefile.am
trunk/include/sj3compat/: Makefile.am  sj3compat.h  sys-queue.h  vis.h
trunk/include/sj3core/: Dict.h  Makefile.am  sj3lowlib.h  sj_const.h  sj_kcnv.h  sj_struct.h  sj_table.h  sj_typedef.h  sj_var.h
trunk/include/sj3lib/: sj3intern.h
trunk/include/sj3rkcv/: rk.h  sj3rkcv.h
trunk/lib/lua/: Makefile.am
trunk/lib/lua/doc/: Makefile.am
trunk/lib/lua/etc/: Makefile.am
trunk/lib/lua/src/: lobject.c
trunk/lib/sj3compat/: bsd-misc.c  daemon.c  vis.c
trunk/lib/sj3core/: Makefile.am  addelcmn.c  alloc.c  chrtbl.c  cl2knj.c  clstudy.c  connect.c  cvtclknj.c  cvtdict.c  cvtkanji.c  deldic.c  fuzoku.c  getkanji.c  hzstrlen.c  istrcmp.c  mk2claus.c  mkkouho.c  mknumber.c  mvmemd.c  ph2knj.c  priority.c  selsuuji.c  setjrec.c  sj2code.c  skiphblk.c  srchdict.c  srchhead.c  srchidx.c  srchnum.c  sstrlen.c  sstrncmp.c  stbtbl.c  stttbl.c  study.c  suujitbl.c  terminat.c
trunk/lib/sj3lib/: Makefile.am  sj.c  sj3lib.pc.in
trunk/lib/sj3lua/: Makefile.am
trunk/lib/sj3rkcv/: Makefile.am
trunk/src/: Makefile.am
trunk/src/sj3demo/: sj3demo.c
trunk/src/sj3dic/: Makefile.am  dictdisp.c  dictmake.c  hinsi.c  sj3dic.c
trunk/src/sj3mkdic/: GramTable  Makefile.am  cnvhinsi.c  file.c  global.c  hindo.c  makedict.c  makelist.c  makeseg.c  offset.c  sj3mkdic.h
trunk/src/sj3proxy/: atomicio.c  priv.c  sj3proxy.c  sj3proxy.lua.example.in
trunk/src/sj3serv/: Makefile.am  auth.c  comuni.c  execute.c  main.c  priv.c  setup.c  sj3serv.h  sj3serv.lua.example.in  time_stamp.sh
trunk/src/sj3stat/: Makefile.am
wiki/: ClientsJa.wiki  FAQJa.wiki  InstallJa.wiki  MigrationGuide.wiki  MigrationGuideJa.wiki  Sj3servSettingsJa.wiki  TodoJa.wiki
