AM_CFLAGS = $(lua_CFLAGS)

EXTRA_DIST = \
	lua.c \
	luac.c \
	print.c

INCLUDES = -I$(top_srcdir)/include/sj3compat

noinst_LTLIBRARIES = liblua.la

liblua_la_SOURCES = \
	lapi.h \
	ldebug.h \
	lgc.h \
	lmem.h \
	lparser.h \
	ltable.h \
	luaconf.h \
	lvm.h \
	lauxlib.h \
	ldo.h \
	llex.h \
	lobject.h \
	lstate.h \
	ltm.h \
	lualib.h \
	lzio.h \
	lcode.h \
	lfunc.h \
	llimits.h \
	lopcodes.h \
	lstring.h \
	lua.h \
	lundump.h \
	lapi.c \
	lcode.c \
	ldebug.c \
	ldo.c \
	ldump.c \
	lfunc.c \
	lgc.c \
	llex.c \
	lmem.c \
	lobject.c \
	lopcodes.c \
	lparser.c \
	lstate.c \
	lstring.c \
	ltable.c \
	ltm.c \
	lundump.c \
	lvm.c \
	lzio.c \
	lauxlib.c \
	lbaselib.c \
	ldblib.c \
	liolib.c \
	lmathlib.c \
	loslib.c \
	ltablib.c \
	lstrlib.c \
	loadlib.c \
	linit.c
